listos usuario y ubigeo

--- a/ProyColegio_GUI/ProyColegio_GUI.csproj
+++ b/ProyColegio_GUI/ProyColegio_GUI.csproj
@@ -52,8 +52,20 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MDIPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MDIPrincipal.Designer.cs">
+      <DependentUpon>MDIPrincipal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MDIPrincipal.resx">
+      <DependentUpon>MDIPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -75,6 +87,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProyColegio_BE\ProyColegio_BE.csproj">
+      <Project>{b62f540f-9f7a-4884-8a41-882b95bf780b}</Project>
+      <Name>ProyColegio_BE</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ProyColegio_BL\ProyColegio_BL.csproj">
+      <Project>{d01c92f2-c698-4612-a19f-7b95c4ad0686}</Project>
+      <Name>ProyColegio_BL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
