--- a/ProyColegio_BL/ProyColegio_BL.csproj
+++ b/ProyColegio_BL/ProyColegio_BL.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlumnoBL.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UbigeoBL.cs" />
