alumnoman02 editar diseño

--- a/ProyColegio_GUI/ProyColegio_GUI.csproj
+++ b/ProyColegio_GUI/ProyColegio_GUI.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlumnoMan01.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AlumnoMan01.Designer.cs">
+      <DependentUpon>AlumnoMan01.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AlumnoMan02.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AlumnoMan02.Designer.cs">
+      <DependentUpon>AlumnoMan02.cs</DependentUpon>
+    </Compile>
     <Compile Include="clsCredenciales.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -61,6 +73,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AlumnoMan01.resx">
+      <DependentUpon>AlumnoMan01.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AlumnoMan02.resx">
+      <DependentUpon>AlumnoMan02.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
