--- a/ProyColegio_GUI/ProyColegio_GUI.csproj
+++ b/ProyColegio_GUI/ProyColegio_GUI.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,6 +61,12 @@
     <Compile Include="AlumnoMan02.Designer.cs">
       <DependentUpon>AlumnoMan02.cs</DependentUpon>
     </Compile>
+    <Compile Include="AlumnoMan03.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AlumnoMan03.Designer.cs">
+      <DependentUpon>AlumnoMan03.cs</DependentUpon>
+    </Compile>
     <Compile Include="clsCredenciales.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -78,6 +87,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AlumnoMan02.resx">
       <DependentUpon>AlumnoMan02.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AlumnoMan03.resx">
+      <DependentUpon>AlumnoMan03.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
