--- a/ProyColegio_BL/ProyColegio_BL.csproj
+++ b/ProyColegio_BL/ProyColegio_BL.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="AlumnoBL.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="PadreBL.cs" />
+    <Compile Include="PeriodoBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UbigeoBL.cs" />
     <Compile Include="UsuarioBL.cs" />
