alumno y curso listos

--- a/ProyColegio_BE/ProyColegio_BE.csproj
+++ b/ProyColegio_BE/ProyColegio_BE.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="AlumnoBE.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="CursoBE.cs" />
     <Compile Include="PadreBE.cs" />
     <Compile Include="PeriodoBE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
