--- a/ProyColegio_ADO/ProyColegio_ADO.csproj
+++ b/ProyColegio_ADO/ProyColegio_ADO.csproj
@@ -45,6 +45,7 @@
     <Compile Include="AlumnoADO.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="ConexionADO.cs" />
+    <Compile Include="CursoADO.cs" />
     <Compile Include="PadreADO.cs" />
     <Compile Include="PeriodoADO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
