--- a/ProyColegio_BL/ProyColegio_BL.csproj
+++ b/ProyColegio_BL/ProyColegio_BL.csproj
@@ -41,13 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProfesorBL.cs" />
     <Compile Include="AlumnoBL.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="CursoBL.cs" />
     <Compile Include="PadreBL.cs" />
     <Compile Include="PeriodoBL.cs" />
+    <Compile Include="ProfesorBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalonBL.cs" />
     <Compile Include="UbigeoBL.cs" />
     <Compile Include="UsuarioBL.cs" />
   </ItemGroup>
