--- a/ProyColegio_BE/ProyColegio_BE.csproj
+++ b/ProyColegio_BE/ProyColegio_BE.csproj
@@ -48,6 +48,7 @@
     <Compile Include="PadreBE.cs" />
     <Compile Include="PeriodoBE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalonBE.cs" />
     <Compile Include="UsuarioBE.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
