--- a/SitioColegioWEB_GUI/SitioColegioWEB_GUI.csproj
+++ b/SitioColegioWEB_GUI/SitioColegioWEB_GUI.csproj
@@ -77,12 +77,14 @@
   <ItemGroup>
     <Compile Include="Consultas\WebAlumnosPorPeriodo.aspx.cs">
       <DependentUpon>WebAlumnosPorPeriodo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Consultas\WebAlumnosPorPeriodo.aspx.designer.cs">
       <DependentUpon>WebAlumnosPorPeriodo.aspx</DependentUpon>
     </Compile>
     <Compile Include="Consultas\WebCursosProfesor.aspx.cs">
       <DependentUpon>WebCursosProfesor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Consultas\WebCursosProfesor.aspx.designer.cs">
       <DependentUpon>WebCursosProfesor.aspx</DependentUpon>
@@ -110,6 +112,7 @@
   <ItemGroup>
     <Content Include="DemoMaster.master" />
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\IISProfile.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
