--- a/SitioColegioWEB_GUI/SitioColegioWEB_GUI.csproj
+++ b/SitioColegioWEB_GUI/SitioColegioWEB_GUI.csproj
@@ -72,6 +72,7 @@
     <Content Include="Consultas\WebNotasAlumnos.aspx" />
     <Content Include="Consultas\WebPromedioNotasSalon.aspx" />
     <Content Include="CSS\DemoCSS.css" />
+    <Content Include="Mantenimientos\WebMantAlumno.aspx" />
     <Content Include="Transacciones\RegistrarMatricula.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -108,6 +109,13 @@
       <DependentUpon>DemoMaster.master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="Mantenimientos\WebMantAlumno.aspx.cs">
+      <DependentUpon>WebMantAlumno.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Mantenimientos\WebMantAlumno.aspx.designer.cs">
+      <DependentUpon>WebMantAlumno.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transacciones\RegistrarMatricula.aspx.cs">
       <DependentUpon>RegistrarMatricula.aspx</DependentUpon>
@@ -138,9 +146,7 @@
       <Name>ProyColegio_BL</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Mantenimientos\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
