--- a/ProyColegio_BE/ProyColegio_BE.csproj
+++ b/ProyColegio_BE/ProyColegio_BE.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CursoProfesorBE.cs" />
     <Compile Include="MatriculaBE.cs" />
     <Compile Include="ProfesorBE.cs" />
     <Compile Include="AlumnoBE.cs" />
